@@ -1,3 +1,4 @@
+extern void fricas_sleep(int);
 extern int get_int(Sock *);
 extern char * get_string(Sock *);
 extern double get_float(Sock *);
