@@ -1,5 +1,10 @@
 2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/lib/sockio-c.c, src/include/sockio-c.H1,
+	src/sman/sman.c: Shorten startup/shutdown delays.
+
+2010-04-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	Fix problem with building graphic examples.
 	* src/algebra/view3D.spad.pamphlet: makeViewport3D(): Do
 	not trash old viewport.
